# mrs-sdk-qt

./: .clang-format  .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  justfile  moon.yml
.agents/skills/design-discussion/: SKILL.md
.agents/skills/reflect/: SKILL.md
.bots/: instructions.md
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml  other.yaml  task.yaml
.github/workflows/: build-vm-image.yml  ci.yml  clang-format.yaml  clang-format.yml  code-review.yaml  code-review.yml  cpp-check.yml  docs.build-deploy-github-pages.yml  docs.deploy-pages.yml  docs.deploy.yml  docs.publish-astro-image.yml  go-check.yml  go-lint.yml  publish-astro-image.yml  vm-build.yml  vm-image.build.yml
.moon/: toolchains.yml  workspace.yml
.moon/tasks/: cpp.yml  go.yml
demos/: .gitignore  README.md
demos/can-simulator/: can-simulator.pro  main.cpp
demos/can-simulator/mrs-sdk-qt/: project.pri  toolchain.pri
demos/spoke-zone-demo/: CMakeLists.txt  moon.yml
demos/spoke-zone-demo/mrs-sdk-qt/: project.cmake  toolchain.cmake  version.conf
demos/spoke-zone-fake/: CMakeLists.txt  main.cpp
docs/: Dockerfile  astro.config.mjs  justfile  moon.yml  package-lock.json  package.json
docs/public/: site.webmanifest
docs/src/content/docs/: index.mdx
docs/src/content/docs/get-started/: build-from-source.mdx  building-from-source.mdx  configure-project.mdx  install.md  install.mdx  installation.md  set-up-build-kits.mdx  set-up-vm.mdx  vm-setup.mdx
docs/src/content/docs/guides/: installation.md  vm-setup.md  vm-setup.mdx
docs/src/content/docs/reference/: installation-structure.mdx  installation-tree.mdx  mvp.md  requirements.md  roadmap.md  sdk-components.md
docs/src/styles/: collapsible.css  content.css  custom.css
docs/static/: site.webmanifest
lib/: Application.cpp  CMakeLists.txt  README.md  moon.yml  mrs-sdk-qt.cmake  mrs-sdk-qt.pri  mrs-sdk-qt.pro
lib/cmake/: mrs-sdk-qt.cmake
lib/cmake/mrs-sdk-qt/: config.cmake
lib/cmake/mrs-sdk-qt/toolchains/: desktop-qt5.cmake  qt-buildroot.cmake  qt5-buildroot.cmake  qt5-desktop.cmake  qt5-yocto.cmake  qt6-desktop.cmake  yocto-qt5.cmake
lib/cmake/toolchains/: qt-buildroot.cmake  qt-local.cmake  qt5-yocto.cmake
lib/include/: Application.hpp  BuildInfo.hpp
lib/qmake/mrs-sdk-qt/: config.pri
lib/qmake/mrs-sdk-qt/toolchains/: buildroot-qt5.pri  desktop-qt6.pri  qt5-buildroot.pri  qt5-desktop.pri  qt5-yocto.pri  qt6-desktop.pri  yocto-qt5.pri
lib/src/: Application.cpp  BuildInfo.cpp
scripts/: check_local_env.sh  format_cpp.py  format_cpp.sh  install_from_source.sh
tools/: format-cpp.sh  format-go.sh  format.sh  justfile  lint-go.sh  moon.yml
tools/mrs-sdk-manager/: README.md  build_local.go  build_local_install.go  go.mod  go.sum  main.go  moon.yml  setup.go  targets.go
tools/mrs-sdk-manager/build_local/: build_local.go  build_local_install.go  build_local_install_test.go  build_local_test.go  build_scope.go  build_scope_test.go  targets.go
tools/mrs-sdk-manager/cmd/: build_local.go  env.go  root.go  setup.go  use.go
tools/mrs-sdk-manager/env/: env.go  vars.go
tools/mrs-sdk-manager/setup/: setup.go
tools/mrs-sdk-manager/setup/templates/: global-config  global-config.cmake  global-config.pri
tools/mrs-sdk-manager/use/: use.go
tools/mrs-sdk-manager/use/templates/: mrs-sdk-qt.cmake  mrs-sdk-qt.pri  project.cmake  project.pri  toolchain.cmake  toolchain.pri  version.conf
tools/mrs-sdk-manager/utils/: check_sdk_root.go  print_status.go  resolve_sdk_version.go  resolve_sdk_version_test.go
vm/: .dockerignore  .gitignore  BUILD.md  Dockerfile  README.md  build-vm.sh  docker-compose.yml  docker-entrypoint.sh  justfile  moon.yml  packer.pkr.hcl  variables.pkr.hcl
vm/cloud-init/: user-data
vm/http/: meta-data  user-data
vm/packer/: variables.pkr.hcl
vm/packer/cloud-init/: user-data
vm/packer/scripts/: provision.sh
vm/provisioning/: base-system.sh  qt-creator.sh  qt-desktop-kits.sh
vm/scripts/: autoprovision.sh  build-vm.sh  provision.sh
vm/utils/: logging.sh
